syntax = "proto3";

option java_package = "ir.ms.pb";
option java_outer_classname = "PB2";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME; //CODE_SIZE;

option go_package = "x";


enum RPC_MessageReq_Enum {
    EMPTY = 0;
    GetLastChnagesForRoom = 7919;
}
enum RPC_MessageReqOffline_Enum {
    EMPTY = 0;
    SetLastSeen = 2402;
}
enum RPC_Auth_Enum {
    EMPTY = 0;
    CheckPhone = 9452;
    SendCode = 5271;
    SendCodeToSms = 3103;
    SendCodeToTelgram = 1536;
    SingUp = 2532;
    SingIn = 4399;
    LogOut = 6941;
}
enum RPC_Msg_Enum {
    EMPTY = 0;
    AddNewTextMessage = 8818;
    AddNewMessage = 7534;
    SetRoomActionDoing = 7576;
    GetMessagesByIds = 9361;
    GetMessagesHistory = 6469;
    SetMessagesRangeAsSeen = 1565;
    DeleteChatHistory = 5524;
    DeleteMessagesByIds = 1169;
    SetMessagesAsReceived = 6852;
    ForwardMessages = 333;
    EditMessage = 2882;
    BroadcastNewMessage = 7558;
    GetFreshChatList = 4759;
    GetFreshRoomMessagesList = 4972;
    GetFreshAllDirectMessagesList = 1094;
    Echo = 7265;
}
enum RPC_Sync_Enum {
    EMPTY = 0;
    GetDirectUpdates = 4628;
    GetGeneralUpdates = 9188;
    GetNotifyUpdates = 6213;
    SetLastSyncDirectUpdateId = 5769;
    SetLastSyncGeneralUpdateId = 7006;
    SetLastSyncNotifyUpdateId = 9093;
}
enum RPC_UserOffline_Enum {
    EMPTY = 0;
    BlockUser = 6486;
    UnBlockUser = 9764;
    UpdateAbout = 2139;
    UpdateUserName = 2469;
    ChangePrivacy = 7847;
    ChangeAvatar = 5921;
}
enum RPC_User_Enum {
    EMPTY = 0;
    CheckUserName = 4;
    GetBlockedList = 2156;
}
